<resources>
    <string name="app_name">Vriksha</string>
    <string name="map_key" translatable="false">AIzaSyDwHPb8O0TYzhy9vdO0qMeax0M5dMaI87I</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_nearby_places">Nearby Places</string>
    <string name="nav_augmented_reality">Augmented Reality</string>
    <string name="nav_identify_saplings">Identify Saplings</string>
    <string name="nav_socialise">Socialise</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_track_plantations">Track Plantations</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Track Plantation</item>
        <item>Nearby Places</item>
        <item>Augmented Reality</item>
        <item>Identify Saplings</item>
        <item>Socialise</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_track_plantations">Track Plantations</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
