<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
         <item
            android:id="@+id/nav_track_plantations"
            android:icon="@drawable/v"
            android:title="@string/nav_track_plantations" />
        <item
            android:id="@+id/nav_nearby_places"
            android:icon="@drawable/v"
            android:title="@string/nav_nearby_places" />
        <item
            android:id="@+id/nav_augmented_reality"
            android:icon="@drawable/v"
            android:title="@string/nav_augmented_reality" />
        <item
            android:id="@+id/nav_identify_saplings"
            android:icon="@drawable/v"
            android:title="@string/nav_identify_saplings" />
        <item
            android:id="@+id/nav_socialise"
            android:icon="@drawable/v"
            android:title="@string/nav_socialise" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <!--<item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>-->

</menu>